@@ -137,6 +137,7 @@ int main(int argc, char * argv[]) //changed from TCHAR, no use when everything e
 	// Map EU3 nations to V2 nations
 	log("Mapping EU3 nations to V2 nations.\n");
 	printf("Mapping EU3 nations to V2 nations.\n");
+	uniteJapan(sourceWorld);
 	removeEmptyNations(sourceWorld);
 	removeDeadLandlessNations(sourceWorld);
 	countryMapping countryMap;
