@@ -185,3 +185,4 @@ Revision	Version Updated		Log Message
 168		C++			More landless nations removed.
 169		C++			All nations formed by decision now blocked during conversion.
 170		C++			Landless nations no longer considered in tech conversion.
+171		C++			Daimyos get merged into Japan.
